# WinterUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WinterGUI.hh  WinterUI.hh  api.hh  definitions.hh  glad.c  mesh.hh  observer.hh  package.bat  pixmap.hh  sendToTest.bat  shader.hh  sharedAssets.hh  signal.cc  signal.hh  test.cc  todo.txt  util.hh  widgets.cc  widgets.hh
assets/: object.frag  object.vert
include/beast/: animation.hh  api.hh  def.hh  fbo.hh  image.hh  mesh.hh  openGL.hh  pool.hh  raytracing.hh  shader.hh  sound.hh  text.hh  threadPool.hh  utils.hh
include/glad/: glad.h
include/iris/: compound.hh  glmconversion.hh  interpolation.hh  mat3.hh  mat4.hh  quaternion.hh  shapes.hh  vec2.hh  vec3.hh  vec4.hh
test/: CMakeLists.txt  assets.bat  glad.c  test.cc
test/include/glad/: glad.h
test/include/iris/: general.hh  mat3.hh  mat4.hh  quaternion.hh  shapes.hh  util.hh  vec3.hh  vec4.hh
test/include/sdl2/: SDL_config.h
test/include/wui/: WinterUI.hh  definitions.hh  pixmap.hh  sharedAssets.hh  signal.hh  version.hh  widgets.hh
